--- a/client/index.html
+++ b/client/index.html
@@ -2,21 +2,29 @@
 <html lang="en-GB">
 	<head>
 		<meta charset="utf-8" />
-		<title>Chatting</title>
-		<link rel="stylesheet" href="./assets/css/design.css" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+		<title>Chat.js</title>
+		<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Noto+Sans:400,700" />
+		<link rel="stylesheet" href="/assets/css/design.css" />
 	</head>
 	<body>
 
-		<div id="messages">
+		<div id="chat">
 
 		</div>
 
-		<form id="compose">
-			<textarea></textarea>
-			<button type="submit">Send</button>
-		</form>
-
-		<script data-main="assets/js/init" src="http://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.5/require.min.js"></script>
+		<script src="//cdnjs.cloudflare.com/ajax/libs/zepto/1.0/zepto.min.js"></script>
+		<script src="/assets/js/vendor/cryptography.js"></script>
+		<script src="/assets/js/vendor/md5.js"></script>
+		<script src="/assets/js/vendor/ejs.js"></script>
+		<script src="/assets/js/class/user.js"></script>
+		<script src="/assets/js/class/cryptography.js"></script>
+		<script src="/assets/js/class/chat.js"></script>
+		<script src="/assets/js/class/template.js"></script>
+		<script src="/assets/js/class/route.js"></script>
+		<script src="/assets/js/controller/homepage.js"></script>
+		<script src="/assets/js/controller/chat.js"></script>
+		<script src="/assets/js/base.js"></script>
 
 	</body>
 </html>
