--- a/client/index.html
+++ b/client/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 		<title>Chat.js</title>
-		<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Noto+Sans:400,700" />
+		<link rel="stylesheet" href="//fonts.googleapis.com/css?family=Noto+Sans:400,700" />
 		<link rel="stylesheet" href="/assets/css/design.css" />
 	</head>
 	<body>
