Added number of unread messages to page title

--- a/client/index.html
+++ b/client/index.html
@@ -20,6 +20,7 @@
 		<script src="/assets/js/class/user.js"></script>
 		<script src="/assets/js/class/cryptography.js"></script>
 		<script src="/assets/js/class/chat.js"></script>
+		<script src="/assets/js/class/page.js"></script>
 		<script src="/assets/js/class/template.js"></script>
 		<script src="/assets/js/class/route.js"></script>
 		<script src="/assets/js/controller/homepage.js"></script>
