--- a/public/index.html
+++ b/public/index.html
@@ -5,16 +5,14 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 		<title>Chatting</title>
 		<link rel="stylesheet" href="//fonts.googleapis.com/css?family=Noto+Sans:400,700" />
-		<link rel="stylesheet" href="/assets/css/design.css" />
+		<link rel="stylesheet" href="/assets/css/app.css" />
 	</head>
 	<body>
 
-		<div id="chat">
-
-		</div>
+		<div id="chat"></div>
 
 		<script src="//cdnjs.cloudflare.com/ajax/libs/zepto/1.0/zepto.min.js"></script>
-		<script src="/assets/js/base.min.js"></script>
+		<script src="/assets/js/app.js"></script>
 
 	</body>
 </html>
