Added loading screens

--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
 	<body>
 
 		<div id="chat"></div>
+		<div class="loading"></div>
 
 		<script src="//cdnjs.cloudflare.com/ajax/libs/zepto/1.0/zepto.min.js"></script>
 		<script src="/assets/js/app.js"></script>
