--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 		<title>Chatting</title>
 		<link rel="stylesheet" href="//fonts.googleapis.com/css?family=Noto+Sans:400,700" />
-		<link rel="stylesheet" href="/assets/css/app.css" />
+		<link rel="stylesheet" href="/assets/minified/app.css" />
 	</head>
 	<body>
 
@@ -13,7 +13,7 @@
 		<div class="loading"></div>
 
 		<script src="//cdnjs.cloudflare.com/ajax/libs/zepto/1.0/zepto.min.js"></script>
-		<script src="/assets/js/app.js"></script>
+		<script src="/assets/minified/app.js"></script>
 
 	</body>
 </html>
