--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,8 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 		<title>Chatting</title>
-		<link rel="stylesheet" href="//fonts.googleapis.com/css?family=Noto+Sans:400,700" />
+		<script src="//use.typekit.net/pfc4qwo.js"></script>
+		<script>try{Typekit.load();}catch(e){}</script>
 		<link rel="stylesheet" href="/assets/minified/app.css" />
 	</head>
 	<body>
@@ -12,7 +13,6 @@
 		<div id="chat"></div>
 		<div class="loading"></div>
 
-		<script src="//cdnjs.cloudflare.com/ajax/libs/zepto/1.0/zepto.min.js"></script>
 		<script src="/assets/minified/app.js"></script>
 
 	</body>
