Cleaned up code, gone red\!

--- a/public/index.html
+++ b/public/index.html
@@ -2,8 +2,8 @@
 <html lang="en-GB">
 	<head>
 		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-		<title>Chatting</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<title>Chatting | Secure Messaging!</title>
 		<script src="//use.typekit.net/pfc4qwo.js"></script>
 		<script>try{Typekit.load();}catch(e){}</script>
 		<link rel="stylesheet" href="/assets/minified/app.css" />
